[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/SpawnPositions.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="spawn1" type="Position2D" parent="."]
position = Vector2( 953, 57 )

[node name="spawn2" type="Position2D" parent="."]
position = Vector2( 999, 161 )

[node name="spawn3" type="Position2D" parent="."]
position = Vector2( 30, 422 )

[node name="spawn4" type="Position2D" parent="."]
position = Vector2( 599, 20 )

[node name="spawn5" type="Position2D" parent="."]
position = Vector2( 22, 513 )

[node name="spawn6" type="Position2D" parent="."]
position = Vector2( 693, 524 )

[node name="spawn7" type="Position2D" parent="."]
position = Vector2( 971, 519 )

[node name="spawn8" type="Position2D" parent="."]
position = Vector2( 998, 320 )

[node name="spawn9" type="Position2D" parent="."]
position = Vector2( 35, 209 )

[node name="spawn10" type="Position2D" parent="."]
position = Vector2( 30, 27 )

[node name="spawn11" type="Position2D" parent="."]
position = Vector2( 290, 25 )

[node name="spawn12" type="Position2D" parent="."]
position = Vector2( 217, 526 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.5
one_shot = true

[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
